refactor: move /submitted page js to js directory

--- a/client/submitted/index.html
+++ b/client/submitted/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <script type="module" src="submitted.js"></script>
+  <script type="module" src="../js/submitted.js"></script>
   <main class="main">
     <div class="white-container shadow text-container" style="margin-top: 2rem;">
       <header>
