refactor: extract common form logic into lib.js and move page-specific code into individual files, will require more attention later

--- a/client/first-visit/index.html
+++ b/client/first-visit/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <script type="module" src="../js/main.js"></script>
+  <script type="module" src="../js/first-visit.js"></script>
 
   <div id="modal-overlay" class="hidden"></div>
   <section id="modal" class="hidden">
