--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="PVD Bike Collective visitor sign-in form and liability waiver" />
+  <meta name="description" content="Lefty Loosey Bike Collective visitor sign-in form and liability waiver" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>PBC Attendance Info</title>
+  <title>LLBC Sign-in Form</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="../css/style.css" />
 </head>
