refactor: add liability waiver and photo release language, revise modal-related scripting

--- a/client/returning/index.html
+++ b/client/returning/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="PVD Bike Collective visitor sign-in form and liability waiver" />
+  <meta name="description" content="Lefty Loosey Bike Collective visitor sign-in form and liability waiver" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>PBC Attendance Info</title>
+  <title>LLBC Attendance Info</title>
   <link rel="icon" type="image/x-icon" href="../favicon.ico">
   <link rel="stylesheet" href="../css/style.css" />
 </head>
@@ -29,7 +29,7 @@
             <label for="email">
               <p>Email</p>
               <input type="email" id="email" name="email" required />
-              <p class="hidden error-message">This field is required</p>
+              <p class="error-message" hidden>This field is required</p>
             </label>
           </div>
         </fieldset>
@@ -69,13 +69,13 @@
           </ul>
           <label class="checkbox">
             <div></div>
-            <p class="hidden error-message">Select at least 1 role</p>
+            <p class="error-message" hidden>Select at least 1 role</p>
           </label>
         </fieldset>
       </section>
 
       <section class="center-horizontal">
-        <button type="submit" id="submit-btn">Submit</button>
+        <button type="submit" class="button" id="submit-btn">Submit</button>
       </section>
     </form>
 
